# arcomage

./: .gitignore  CMakeLists.txt  README.md
python/: export_onnx.py  train_selfplay.py
src/: bindings.cpp  bot_onnx.hpp  engine.cpp  engine.hpp  main.cpp
